<resources>
    <string name="app_name">"SibWeather"</string>
    <string name="base_api_url">http://pogoda.ngs.ru/</string>

    <string name="select_city">Выбрать город</string>
    <string name="update">Обновить</string>
    <string name="load">Идет загрузка</string>

    <string name="day_of_week">Пн.</string>
    <string name="date">01 января</string>
    <string name="time">День</string>

    <string name="default_temp">+ 25</string>

    <string name="wind">Ветер:</string>
    <string name="default_wind">5-7м/с Ю-З</string>

    <string name="pressure">Давление:</string>
    <string name="default_press">746 мм</string>

    <string name="morning">Утро</string>
    <string name="day">День</string>
    <string name="evening">Вечер</string>
    <string name="night">Ночь</string>
    <string name="weather">weather</string>
</resources>
