<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:cardBackgroundColor="@color/colorBack"
    app:cardCornerRadius="@dimen/card_radius"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/padding_small">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_day_forecast_text_view_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="@string/time"
            android:textSize="@dimen/h2_size"/>

        <TextView
            android:id="@+id/item_day_forecast_text_view_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="@string/default_temp"
            android:textSize="@dimen/h1_size"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/item_day_forecast_image_view_pic"
            android:layout_width="@dimen/small_pic_width"
            android:layout_height="@dimen/small_pic_height"
            android:src="@drawable/default_atmosphere"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding_small">

            <TextView
                android:id="@+id/item_day_forecast_text_view_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:text="@string/default_wind"
                android:textSize="@dimen/h2_size"/>

            <TextView
                android:id="@+id/item_day_forecast_text_view_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:text="@string/default_press"
                android:textSize="@dimen/h2_size"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>