<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:cardBackgroundColor="@color/colorBack"
    app:cardCornerRadius="@dimen/card_radius"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/text_width_weather"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_small">

            <TextView
                android:id="@+id/item_weather_text_view_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_of_week"
                android:textColor="@color/colorText"
                android:textSize="@dimen/h2_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/item_weather_text_view_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/colorText"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_weather_linear_layout_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_small">

            <TextView
                android:id="@+id/item_weather_text_view_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:text="@string/default_temp"
                android:textColor="@color/colorText"
                android:textSize="@dimen/h1_size"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/item_weather_image_view_pic"
                android:layout_width="@dimen/small_pic_width"
                android:layout_height="@dimen/small_pic_height"
                android:src="@drawable/default_atmosphere"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/padding_small">

                <TextView
                    android:id="@+id/item_weather_text_view_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding_small"
                    android:text="@string/default_wind"
                    android:textColor="@color/colorText"/>

                <TextView
                    android:id="@+id/item_weather_text_view_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_press"
                    android:textColor="@color/colorText"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
