<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/day_weather_bubble"
        android:layout_width="@dimen/small_bubble_d"
        android:layout_height="@dimen/small_bubble_d"
        android:background="@drawable/small_bubble">

        <ImageView
            android:id="@+id/day_weather_pic"
            android:layout_width="@dimen/weather_pic_width"
            android:layout_height="@dimen/weather_pic_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/default_atm"/>

        <TextView
            android:id="@+id/day_weather_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp"
            android:text="@string/default_temp"
            android:textSize="@dimen/small_bubble_h2_size"
            android:textStyle="bold"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/day_weather_day_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/day_of_week"
            android:textSize="@dimen/small_bubble_h2_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/day_weather_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="@dimen/small_bubble_h3_size"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>
