<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="@dimen/big_bubble_d"
        android:layout_height="@dimen/big_bubble_d"
        android:background="@drawable/middle_bubble">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/today_weather_day_of_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/day_of_week"
                android:textSize="@dimen/big_bubble_h2_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/today_weather_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="@dimen/big_bubble_h4_size"
                android:textStyle="bold"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/today_weather_pic"
            android:layout_width="@dimen/weather_pic_width_big"
            android:layout_height="@dimen/weather_pic_height_big"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/default_atm"/>

        <TextView
            android:id="@+id/today_weather_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="6dp"
            android:text="@string/default_temp"
            android:textSize="@dimen/big_bubble_h1_size"
            android:textStyle="bold"/>

    </RelativeLayout>

</LinearLayout>
